--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -28,7 +28,10 @@
         android:layout_height="match_parent"
         app:layoutManager="android.support.v7.widget.StaggeredGridLayoutManager"
         app:spanCount="2"
+        android:orientation="vertical"
         android:id="@+id/recycler"
+        tools:listitem="@layout/view_note"
+        tools:itemCount="11"
         />
 
 </android.support.design.widget.CoordinatorLayout>
