Redesign edit fragment

--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -1,33 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <EditText
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/titleEdit"
-        android:textSize="48sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/textEdit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:hint="@string/note_title"
-        android:importantForAutofill="no"
-        android:inputType="text"/>
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="48dp">
 
-    <EditText
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:id="@+id/textEdit"
-        app:layout_constraintTop_toBottomOf="@id/titleEdit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:hint="@string/note_text"
-        android:importantForAutofill="no"
-        android:inputType="text"/>
+        <android.support.v7.widget.Toolbar
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/titleEdit"
+            app:layout_constraintBottom_toBottomOf="@id/titleEdit"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"/>
 
-</android.support.constraint.ConstraintLayout>
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/titleEdit"
+            android:textSize="48sp"
+            android:elevation="4dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/textEdit"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:hint="@string/note_title"
+            android:background="@null"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:importantForAutofill="no"
+            android:inputType="text"/>
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/textEdit"
+            app:layout_constraintTop_toBottomOf="@id/titleEdit"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:hint="@string/note_text"
+            android:background="@null"
+            android:layout_margin="8dp"
+            android:importantForAutofill="no"
+            android:gravity="top|start"
+            android:inputType="textMultiLine"/>
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.design.bottomappbar.BottomAppBar
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        app:backgroundTint="?attr/colorPrimary"
+        android:layout_gravity="bottom"
+        android:id="@+id/bottomBar"
+        android:elevation="4dp"
+        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"/>
+
+</android.support.design.widget.CoordinatorLayout>
