--- a/app/src/main/res/layout/view_note.xml
+++ b/app/src/main/res/layout/view_note.xml
@@ -7,15 +7,16 @@
     android:layout_height="wrap_content"
     android:layout_margin="2dp">
 
-    <android.support.v7.widget.CardView
+    <android.support.design.card.MaterialCardView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:cardElevation="2dp"
+        app:cardElevation="4dp"
         android:id="@+id/card"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="8dp"
         />
 
     <TextView
@@ -26,8 +27,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/text"
-        android:elevation="2dp"
+        android:elevation="4dp"
         android:layout_margin="4dp"
+        android:textAppearance="?attr/textAppearanceHeadline6"
         tools:text="Notiz Titel"/>
 
     <TextView
@@ -38,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:elevation="2dp"
+        android:elevation="4dp"
         android:layout_margin="4dp"
         tools:text="Dies ist eine Notiz."/>
 
