Use default animations

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,7 +12,7 @@
         tools:layout="@layout/fragment_notes">
         <action
             android:id="@+id/action_notesFragment_to_editFragment2"
-            app:destination="@id/editFragment"/>
+            app:destination="@id/editFragment" app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim" app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
     </fragment>
     <fragment
         android:id="@+id/editFragment"
