--- a/app/src/main/res/layout/view_drawer_tag.xml
+++ b/app/src/main/res/layout/view_drawer_tag.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="?attr/selectableItemBackground">
 
     <CheckBox
         android:layout_width="wrap_content"
