--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -4,6 +4,7 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:fitsSystemWindows="true"
              tools:context=".ui.fragment.NotesFragment">
 
     <android.support.design.widget.AppBarLayout
@@ -70,7 +71,7 @@
         android:id="@+id/overlay"
         android:visibility="gone"
         android:elevation="11dp"
-        android:fitsSystemWindows="false"
+        android:fitsSystemWindows="true"
         android:background="#AA000000"
         />
 
